fix: Fix broken jira test